syntax = "proto3";
import "google/protobuf/struct.proto";

message Empty {}

message EmptyRequest {}

message WorkerRequest {
  string action = 1;
  repeated string args = 2;
}

message WorkerResponse{
  google.protobuf.Struct result = 1;
}

message EventRequest {
  string event = 1;
  google.protobuf.Struct data = 2;
}

message EventResponse{
  string event = 1;
  google.protobuf.Struct data = 2;
}

message JoinRequest {
  string user = 1;
}

message InfoRequest {}

message InfoResponse{
  string name = 1;
  repeated string protos = 2;
}


service Info{
  rpc getServiceInfo(InfoRequest) returns (InfoResponse) {}
}
service EventEmitter{
  rpc join(JoinRequest) returns (stream EventResponse) {}
  rpc leave(Empty) returns (Empty) {}
}
service EventListener{
  rpc send(EventRequest) returns (Empty) {}
}
service Worker{
  rpc run(WorkerRequest) returns (WorkerResponse) {}
}

